--- a/templates/Back/commande/new.html.twig
+++ b/templates/Back/commande/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}New Commande{% endblock %}
 
-{% block section %}
+{% block main %}
     <h1>Create new Commande</h1>
 
     {{ include('Back/commande/_form.html.twig') }}
