--- a/templates/Front/article/edit.html.twig
+++ b/templates/Front/article/edit.html.twig
@@ -5,9 +5,9 @@
 {% block section %}
     <h1>Edit Article</h1>
 
-    {{ include('article/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('Front/article/_form.html.twig', {'button_label': 'Update'}) }}
 
     <a href="{{ path('app_article_index') }}">back to list</a>
 
-    {{ include('article/_delete_form.html.twig') }}
+    {{ include('Front/article/_delete_form.html.twig') }}
 {% endblock %}
