--- a/templates/Back/article/edit.html.twig
+++ b/templates/Back/article/edit.html.twig
@@ -2,12 +2,54 @@
 
 {% block title %}Edit Article{% endblock %}
 
-{% block section %}
-    <h1>Edit Article</h1>
-
-    {{ include('Back/article/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_article_index') }}">back to list</a>
-
-    {{ include('Back/article/_delete_form.html.twig') }}
+{% block main %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <h1 class="text-center mb-4">Modifier l'article</h1>
+                <div class="card">
+                    <div class="card-body">
+                        {{ form_start(form, {'attr': {'class': 'article-form', 'novalidate': 'novalidate'}}) }}
+                            <div class="form-group">
+                                {{ form_label(form.nomArticle, 'Nom de l\'article', {'label_attr': {'class': 'form-label'}}) }}
+                                {{ form_widget(form.nomArticle, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_errors(form.nomArticle) }}
+                            </div>
+                            <div class="form-group">
+                                {{ form_label(form.prixArticle, 'Prix de l\'article', {'label_attr': {'class': 'form-label'}}) }}
+                                {{ form_widget(form.prixArticle, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_errors(form.prixArticle) }}
+                            </div>
+                            <div class="form-group">
+                                {{ form_label(form.quantiteArticle, 'Quantité de l\'article', {'label_attr': {'class': 'form-label'}}) }}
+                                {{ form_widget(form.quantiteArticle, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_errors(form.quantiteArticle) }}
+                            </div>
+                            <div class="form-group">
+                                {{ form_label(form.typeArticle, 'Type de l\'article', {'label_attr': {'class': 'form-label'}}) }}
+                                {{ form_widget(form.typeArticle, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_errors(form.typeArticle) }}
+                            </div>
+                            <div class="form-group">
+                                {{ form_label(form.descriptionArticle, 'Description de l\'article', {'label_attr': {'class': 'form-label'}}) }}
+                                {{ form_widget(form.descriptionArticle, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_errors(form.descriptionArticle) }}
+                            </div>
+                            <div class="form-group">
+                                {% if form.photoArticle.vars.value %}
+                                    <img src="{{ asset(form.photoArticle.vars.value) }}" alt="Image" style="max-width: 200px; max-height: 200px;">
+                                {% endif %}
+                                {{ form_widget(form.photoArticle, {'attr': {'class': 'form-control-file'}}) }}
+                             
+                            </div>
+                            {{ form_row(form.save, {'label': 'Modifier Article', 'attr': {'class': 'btn btn-primary btn-block'}}) }}
+                            
+                        {{ form_end(form) }}
+                        
+                    </div>
+                </div>
+                <a href="{{ path('app_article_index_back') }}" class="btn btn-secondary btn-block mt-3">Retour à la liste</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
