--- a/templates/Back/rendezVous/addRendezVousBack.html.twig
+++ b/templates/Back/rendezVous/addRendezVousBack.html.twig
@@ -1,12 +1,29 @@
 {% extends 'Back/base.html.twig' %}
 {# templates/task/new.html.twig #}
-
 {% block main %}
 <div style="display: flex; align-items: center;">
     <div style="margin-right: 159px;">
-        {{ form_start(form, {'attr': {'novalidate': 'novalidate', 'style': 'margin: 90px;'}}) }}
-        {{ form_widget(form) }}
-        {{ form_end(form) }}
+    {{ form_start(form, {'attr': {'novalidate': 'novalidate', 'style': 'margin: 90px;'}}) }}
+    <table>
+    <tr>{{form_label(form.id_personne)}}</tr>
+    <tr>{{form_widget(form.id_personne)}}</tr>
+    <tr>{{form_errors(form.id_personne)}}</tr>
+
+    <tr>{{form_label(form.specialiteMedecin)}}</tr>
+    <tr>{{form_widget(form.specialiteMedecin)}}</tr>
+    <tr>{{form_errors(form.specialiteMedecin)}}</tr>
+
+    <tr>{{form_label(form.idMedecin)}}</tr>
+    <tr>{{form_widget(form.idMedecin)}}</tr>
+    <tr>{{form_errors(form)}}</tr> 
+</br>
+    <tr>{{form_label(form.dateRendezVous)}}</tr>
+    <tr>{{form_widget(form.dateRendezVous)}}</tr>
+    <tr>{{form_errors(form.dateRendezVous)}}</tr>
+    </table>
+
+    {{form_widget(form.save)}}
+    {{form_end(form)}}
     </div>
     <img src="{{ asset('img/imgGM/rendezVous.png') }}" alt="Image Description" style="width: 500px; height: auto;">
 </div>
