--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,7 +11,10 @@
 # Help: https://bootstrapmade.com/color-system/
 --------------------------------------------------------------*/
 /* Fonts */
-
+.btn-annuler {
+  color: #ffffff; /* Couleur du texte en blanc */
+  background-color: #ff0000; /* Couleur de fond en rouge */
+}
 :root {
   --default-font: "Open Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --heading-font: "Raleway", sans-serif;
